postgresql-9.3 (9.3~beta2-3) UNRELEASED; urgency=low

  * debian/rules: Support multi-arch locations of {tcl,tk}-config.

 -- Martin Pitt <mpitt@debian.org>  Fri, 05 Jul 2013 12:57:43 +0200

postgresql-9.3 (9.3~beta2-2) experimental; urgency=low

  * debian/postgresql-9.3.preinst: Abort upgrade if there are still clusters
    with the 9.3beta1 format, these need to be dumped/dropped first.
    (Closes: #714328)

 -- Martin Pitt <mpitt@debian.org>  Fri, 28 Jun 2013 14:37:06 +0200

postgresql-9.3 (9.3~beta2-1) experimental; urgency=low

  [ Christoph Berg ]
  * hurd-i386: Ignore testsuite failures so we have a working libpq5 (they
    don't implement semaphores so the server won't even start).
  * Mark postgresql-9.3 as beta in the description, suggested by Joshua D.
    Drake.

  [ Martin Pitt ]
  * New upstream release 9.3 beta2.

 -- Martin Pitt <mpitt@debian.org>  Wed, 26 Jun 2013 15:13:32 +0200

postgresql-9.3 (9.3~beta1-3) experimental; urgency=low

  * sparc, alpha: Remove -O1 - we have been using this since 2007, but now it
    looks the other way round, "make check" fails on sparc with -O1, but works
    with -O2.
  * kfreebsd-*: Ignore testsuite failures until we resolve the plperl
    failures, see #704802.

 -- Christoph Berg <myon@debian.org>  Fri, 31 May 2013 16:34:34 -0700

postgresql-9.3 (9.3~beta1-2) experimental; urgency=low

  * Update watch file for 9.3.
  * 64-pg_upgrade-sockdir: If cwd is too long to use as socketdir in
    pg_upgrade, fall back to /tmp. (A Unix socket path must not be longer than
    107 chars.)

 -- Christoph Berg <myon@debian.org>  Mon, 13 May 2013 23:09:44 -0700

postgresql-9.3 (9.3~beta1-1) experimental; urgency=low

  [ Christoph Berg ]
  * Update for 9.3. Packaging based on 9.2 branch.
  * Remove 03-python-includedirs.patch, implemented upstream.
  * libpq5.symbols: Add new symbols: PQconninfo, lo_lseek64, lo_tell64,
    lo_truncate64.
  * debian/rules: Remove the temporary patches from pg_regress, and teach