@@ -1,6 +1,8 @@
 postgresql-9.3 (9.3~beta2-3) UNRELEASED; urgency=low
 
   * debian/rules: Support multi-arch locations of {tcl,tk}-config.
+  * debian/rules: Don't build with kerberos and LDAP support for
+    DEB_STAGE=stage1 to aid with bootstrapping.
 
  -- Martin Pitt <mpitt@debian.org>  Fri, 05 Jul 2013 12:57:43 +0200
 
